Updated popper options to flip tooltips and properly position tooltips to prevent overflow. Added aria labels, roles, aria describedby etc attributes to tooltip trigger and tooltip container

--- a/src/scss/_baseline.scss
+++ b/src/scss/_baseline.scss
@@ -3,6 +3,7 @@
 :root {
   --dark: #262626;
   --offDark: #bfbfbf;
+  --white: #ffffff;
 }
 
 * {
