--- a/src/scss/components/tooltips.scss
+++ b/src/scss/components/tooltips.scss
@@ -1,7 +1,6 @@
 .tooltip {
   display: inline-block;
   font-size: 16px;
-  white-space: nowrap;
   position: relative;
 }
 
@@ -22,103 +21,75 @@
 }
 
 .tooltip__container {
-  opacity: 0;
-  visibility: hidden;
-  background: white;
+  background: #fff;
   border: 1px solid var(--dark);
-  padding: 24px;
-  // min-width: 150px;
-  // max-width: 300px;
-  transition: 0.2s ease opacity;
+  height: 0;
+  min-width: 100px;
+  max-width: 290px;
+  opacity: 0;
+  transition: 0.4s ease opacity;
+  visibility: hidden;
   &.active {
+    height: auto;
     opacity: 1;
     visibility: visible;
   }
 
-  .arrow,
-  .arrow::before {
-    position: absolute;
-    width: 12px;
-    height: 12px;
+  .content {
+    padding: 20px;
   }
 
-  .arrow::before {
-    content: "";
-    transform: rotate(45deg);
-    background: white;
-    border-left: 1px solid #333;
-    border-top: 1px solid #333;
-  }
-  .arrow::after {
-    content: "";
-    transform: rotate(45deg);
-    background: #333;
-    width: 9px;
-    height: 9px;
-  }
-  &[data-popper-placement^="top"] > .arrow {
-    bottom: -6px;
-  }
-  &[data-popper-placement^="bottom"] > .arrow {
-    top: -6px;
+  .arrow {
+    position: relative;
+    &:before {
+      content: "";
+      height: 0;
+      position: absolute;
+      width: 0;
+    }
+    &:after {
+      content: "";
+      height: 0;
+      position: absolute;
+      width: 0;
+    }
   }
 
-  // &[data-popper-placement^="top"] {
-  //   .arrow {
-  //     position: absolute;
-  //     width: 22px;
-  //     height: 11px;
-  //     &::before {
-  //       position: absolute;
-  //       width: 8px;
-  //       height: 8px;
-  //       background: red;
-  //       visibility: visible;
-  //       content: "";
-  //       transform: rotate(45deg);
-  //       // bottom: 0;
-  //       // content: "";
-  //       // // width: 0;
-  //       // // height: 0;
-  //       // border-top: 11px solid var(--dark);
-  //       // border-right: 11px solid transparent;
-  //       // border-left: 11px solid transparent;
-  //       // position: absolute;
-  //       // top: -11px;
-  //       // left: 50%;
-  //       // transform: translateX(-50%);
-  //     }
-  //   }
-  // }
-  // &[data-popper-placement^="bottom"] {
-  //   .arrow {
-  //     position: relative;
-  //     &::before {
-  //       top: 0;
-  //       content: "";
-  //       width: 0;
-  //       height: 0;
-  //       border-bottom: 11px solid var(--dark);
-  //       border-right: 11px solid transparent;
-  //       border-left: 11px solid transparent;
-  //       position: absolute;
-  //       // top: -11px;
-  //       // left: 50%;
-  //       // transform: translateX(-50%);
-  //     }
-  //   }
-  // }
+  &[data-popper-placement^="bottom"] {
+    .arrow {
+      left: -10px !important;
+      top: 0;
+      &:before {
+        border-bottom: 11px solid var(--dark);
+        border-left: 11px solid transparent;
+        border-right: 11px solid transparent;
+        top: -11px;
+      }
+      &:after {
+        border-bottom: 10px solid var(--white);
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        top: -10px;
+      }
+    }
+  }
 
-  // &:after {
-  //   content: "";
-  //   width: 0;
-  //   height: 0;
-  //   border-bottom: 10px solid #fff;
-  //   border-right: 10px solid transparent;
-  //   border-left: 10px solid transparent;
-  //   position: absolute;
-  //   top: -10px;
-  //   // left: 50%;
-  //   // transform: translateX(-50%);
-  // }
+  &[data-popper-placement^="top"] {
+    .arrow {
+      bottom: 0px;
+      left: -10px !important;
+      &:before {
+        border-left: 11px solid transparent;
+        border-right: 11px solid transparent;
+        border-top: 11px solid var(--dark);
+        bottom: -11px !important;
+      }
+      &:after {
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        border-top: 10px solid var(--white);
+        bottom: -10px !important;
+      }
+    }
+  }
 }
